# spf

./: .gitignore  Cargo.toml  README.md
examples/: CMakeLists.txt  README.md
examples/c/: main.c
examples/cpp/: main.cpp
examples/matlab/: example.m
examples/python/: example.py
matlab_dist/: README.md  auto_release_mltbx.m  build_mltbx.m  prepare_binaries.m
matlab_dist/+spf/: hydraulicDiameter.m  kpRect.m  lambda.m  load.m  unload.m
matlab_dist/include/: spf.h
src/: lib.rs
