[package]
name = "spf"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Simple smooth pipe friction utilities with C ABI exports for C/C++/Python/MATLAB integration"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qchen-fdii-cardc/spf"
documentation = "https://docs.rs/spf"
homepage = "https://github.com/qchen-fdii-cardc/spf"
keywords = ["fluid", "friction", "ffi", "hydraulics", "engineering"]
categories = ["science", "mathematics", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
